<resources>
    <string name="app_name">MovieCatalogue-MADE</string>

    <string name="tab_text_1">Movie</string>
    <string name="tab_text_2">TV Show</string>
    <string name="tab_text_3">About</string>
    <string name="view_detail">View Detail</string>
    <string name="about_me">About me</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="about_text">
This application was created to meet the Module on Learning Materials to Become an Android Developer Expert \n \nAPI used as data source in this application is \nhttps://api.themoviedb.org/</string>
    <string name="about_email">alif.stinky@gmail.com</string>
    <string name="about_name">Alif Mufthi</string>
    <string name="change_language">Change Language</string>
    <string name="show_title">Title</string>
    <string name="show_overview">Overview</string>
    <string name="show_release_date">Release Date</string>
    <string name="rating">RATING</string>
    <string name="popularity">POPULARITY</string>
    <string name="voter">VOTER</string>
    <string name="show_cover">Show Cover</string>
    <string name="overview_list">%1$s…</string>
    <string name="rate_placeholder">Rate Placeholder</string>
    <string name="list_item_photo">List Item Photo</string>
    <string name="favorites">Favorites</string>
    <string name="add_favorite"> %1$s is added to Favorites</string>
    <string name="delete_favorite"> %1$s is removed from Favorites</string>
    <string name="search">search</string>
    <string name="back_button">Back Button</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="query_hint">Search show, tv show</string>
    <string name="search_result">Search result (%1$s):</string>
    <string name="genre">Genre</string>
    <string name="category">Category</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv show</string>
    <string name="find_by_genre">Find by Genre</string>
    <string name="today_release_title">%1$s is released today</string>
    <string name="today_release_subtitle">watch the movie at your local cinema</string>
    <string name="reminder">We miss you !</string>
    <string name="settings">Settings</string>
    <string name="key_reminder">KEY_DAILY_REMINDER</string>
    <string name="key_release">KEY_TODAY_RELEASE</string>
    <string name="summary_release">Notify me when there is show released</string>
    <string name="title_release">Daily Release</string>
    <string name="summary_reminder">Remind me to open application everyday</string>
    <string name="title_reminder">Today Reminder</string>
    <string name="category_reminder">Reminder</string>
    <string name="category_advanced">Advanced</string>
    <string name="delete_favorites">Delete Favorited Shows</string>
    <string name="key_change_language">KEY_CHANGE_LANGUAGE</string>
    <string name="key_delete_favorites">KEY_DELETE_FAVORITES</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="will_be_deleted">All favorite shows will be deleted</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="count_deleted">"%1$s favorite show is deleted"</string>
    <string name="appwidget_text">Favorite Shows</string>
    <string name="widget_item_holder">Widget Item Holder</string>
    <string name="empty_data">Empty Data</string>
    <string name="toast_alert_set">Alert are set!</string>
    <string name="toast_reminder_set">You will be reminded everyday!</string>
    <string name="show_cannot_be_found">show cannot be found.</string>
    <string name="sad_face">Sad Face</string>
</resources>
