<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/category_reminder"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:key="@string/key_reminder"
            android:summary="@string/summary_reminder"
            android:title="@string/title_reminder"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:key="@string/key_release"
            android:summary="@string/summary_release"
            android:title="@string/title_release"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_advanced"
        app:iconSpaceReserved="false">
        <Preference
            android:key="@string/key_change_language"
            android:title="@string/change_language"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="@string/key_delete_favorites"
            android:title="@string/delete_favorites"
            app:iconSpaceReserved="false" />
        <!--        Lagi Belajar -->
        <!--        <SwitchPreferenceCompat-->
        <!--            android:title="@string/night_mode"-->
        <!--            android:key="@string/key_night_mode"-->
        <!--            app:iconSpaceReserved="false"/>-->
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>