<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/rectangle_with_radius"
        android:backgroundTint="@color/textSecondary"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/about_me"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/about_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_photo"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/about_email"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/about_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</FrameLayout>