<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".search.menu.SearchMenuFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/category"
        android:textColor="@color/textPrimary" />

    <RadioGroup
        android:id="@+id/rg_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/movie"
            android:textColor="@color/textPrimary" />

        <RadioButton
            android:id="@+id/radio_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_show"
            android:textColor="@color/textPrimary" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/find_by_genre"
        android:textColor="@color/textPrimary" />

    <ListView
        android:id="@+id/lv_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>